-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0 Beta
-
None
-
-
efd2ea8ea720833f9602154221d9654aea1f2e6f
See attached example. Builds with Qt 5.6 and earlier, does not build with Qt 5.7.
The reason is that qsystemdetection.h now relies on TargetConditionals.h to detect OS X, but moc does not get passed the include path to the SDKs /usr/include directory, so it doesn't find TargetConditionals.h.
Manually changing the moc command to include -I/Applications/Xcode.app/......../usr/include makes it work.
| For Gerrit Dashboard: QTBUG-52687 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 157369,2 | ExportTool: Fix patching of QMAKE_DEFAULT_INCDIRS on OSX and IOS | master | qtqa/tqtc-coin-ci | Status: DEFERRED | +1 | 0 |
| 157817,12 | Determine the compiler's default include and lib directories at qmake time | 5.7.0 | qt/qtbase | Status: MERGED | +2 | 0 |
| 158796,4 | Determine the compiler's default include and lib directories at qmake time | dev | qt/qtbase | Status: ABANDONED | -2 | 0 |