tools/configure/configureapp.cpp
@@ -22366,30 +22366,6 @@ index|]
 operator|<<
 name|endl
 expr_stmt|;
-if|if
-condition|(
-name|dictionary
-operator|.
-name|contains
-argument_list|(
-literal|"XQMAKESPEC"
-argument_list|)
-condition|)
-block|{
-comment|// FIXME: add detection
-name|configStream
-operator|<<
-literal|"    QMAKE_DEFAULT_LIBDIRS = /lib /usr/lib"
-operator|<<
-name|endl
-expr_stmt|;
-name|configStream
-operator|<<
-literal|"    QMAKE_DEFAULT_INCDIRS = /usr/include /usr/local/include"
-operator|<<
-name|endl
-expr_stmt|;
-block|}
 name|configStream
 operator|<<
 literal|"}"
